--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </style>
 </head>
 <body>
-  <div id="info">Desktop: WASD: Move • Mouse: Look • Click: Interact<br>Mobile: Buttons: Forward/Backward • Tilt: Look & Strafe • Tap: Interact</div>
+  <div id="info">Desktop: WASD: Move • Mouse: Look • Click: Interact<br>Mobile: Buttons: Forward/Backward • Move Phone: Strafe • Tilt: Look • Tap: Interact</div>
   <div id="mobile-controls">
     <button class="control-button" id="move-forward">↑</button>
     <button class="control-button" id="move-backward">↓</button>
@@ -95,7 +95,7 @@
         this.isMobile = /Android|iPhone|iPad/i.test(navigator.userAgent);
         this.zoomedObject = null;
         this.originalCameraPos = new THREE.Vector3();
-        this.tiltDirection = null; // For mobile strafing
+        this.tiltDirection = null; // For mobile strafing via motion
         this.init();
       }
 
@@ -113,18 +113,26 @@
       }
 
       setupScene() {
-        this.scene.background = new THREE.Color(0x0a0a1a);
-        this.scene.fog = new THREE.FogExp2(0x0a0a1a, 0.015);
+        try {
+          this.scene.background = new THREE.Color(0x0a0a1a);
+          this.scene.fog = new THREE.FogExp2(0x0a0a1a, 0.015);
+        } catch (error) {
+          console.error('Scene setup failed:', error);
+        }
       }
 
       setupCamera() {
-        this.camera = new THREE.PerspectiveCamera(
-          75,
-          window.innerWidth / window.innerHeight,
-          0.1,
-          1000
-        );
-        this.camera.position.set(0, 1.6, 8);
+        try {
+          this.camera = new THREE.PerspectiveCamera(
+            75,
+            window.innerWidth / window.innerHeight,
+            0.1,
+            1000
+          );
+          this.camera.position.set(0, 1.6, 8);
+        } catch (error) {
+          console.error('Camera setup failed:', error);
+        }
       }
 
       setupRenderers() {
@@ -216,57 +224,61 @@
       }
 
       setupModels() {
-        const loader = new GLTFLoader();
-        const models = [
-          {
-            url: 'https://threejs.org/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf',
-            position: [5, 0, -10],
-            scale: [1.5, 1.5, 1.5],
-            rotation: [0, Math.PI / 4, 0]
-          },
-          {
-            url: 'https://threejs.org/examples/models/gltf/LeePerrySmith/LeePerrySmith.gltf',
-            position: [-5, 3, -5],
-            scale: [0.8, 0.8, 0.8],
-            animate: (model) => {
-              model.position.y = 3 + Math.sin(Date.now() * 0.001) * 0.2;
-            }
-          },
-          {
-            url: 'https://threejs.org/examples/models/gltf/CesiumMan/glTF/CesiumMan.gltf',
-            position: [-8, 0, 0],
-            scale: [1.2, 1.2, 1.2],
-            rotation: [0, -Math.PI / 6, 0]
-          }
-        ];
-
-        models.forEach(({ url, position, scale, rotation, animate }) => {
-          loader.load(
-            url,
-            (gltf) => {
-              const model = gltf.scene;
-              model.position.set(...position);
-              model.scale.set(...scale);
-              if (rotation) model.rotation.set(...rotation);
-              model.traverse(child => {
-                if (child.isMesh) {
-                  child.castShadow = true;
-                  child.receiveShadow = true;
-                }
-              });
-              this.scene.add(model);
-              if (animate) {
-                const animateModel = () => {
-                  animate(model);
-                  requestAnimationFrame(animateModel);
-                };
-                animateModel();
+        try {
+          const loader = new GLTFLoader();
+          const models = [
+            {
+              url: 'https://threejs.org/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf',
+              position: [5, 0, -10],
+              scale: [1.5, 1.5, 1.5],
+              rotation: [0, Math.PI / 4, 0]
+            },
+            {
+              url: 'https://threejs.org/examples/models/gltf/LeePerrySmith/LeePerrySmith.gltf',
+              position: [-5, 3, -5],
+              scale: [0.8, 0.8, 0.8],
+              animate: (model) => {
+                model.position.y = 3 + Math.sin(Date.now() * 0.001) * 0.2;
               }
             },
-            undefined,
-            (error) => console.error(`Error loading ${url}:`, error)
-          );
-        });
+            {
+              url: 'https://threejs.org/examples/models/gltf/CesiumMan/glTF/CesiumMan.gltf',
+              position: [-8, 0, 0],
+              scale: [1.2, 1.2, 1.2],
+              rotation: [0, -Math.PI / 6, 0]
+            }
+          ];
+
+          models.forEach(({ url, position, scale, rotation, animate }) => {
+            loader.load(
+              url,
+              (gltf) => {
+                const model = gltf.scene;
+                model.position.set(...position);
+                model.scale.set(...scale);
+                if (rotation) model.rotation.set(...rotation);
+                model.traverse(child => {
+                  if (child.isMesh) {
+                    child.castShadow = true;
+                    child.receiveShadow = true;
+                  }
+                });
+                this.scene.add(model);
+                if (animate) {
+                  const animateModel = () => {
+                    animate(model);
+                    requestAnimationFrame(animateModel);
+                  };
+                  animateModel();
+                }
+              },
+              undefined,
+              (error) => console.error(`Error loading ${url}:`, error)
+            );
+          });
+        } catch (error) {
+          console.error('Models setup failed:', error);
+        }
       }
 
       setupWebViews() {
@@ -510,7 +522,7 @@
               });
             }
 
-            // Device orientation for looking and strafing
+            // Device orientation for looking
             if (window.DeviceOrientationEvent && typeof DeviceOrientationEvent.requestPermission === 'function') {
               document.addEventListener('touchstart', () => {
                 DeviceOrientationEvent.requestPermission()
@@ -520,9 +532,24 @@
                     }
                   })
                   .catch(error => console.error('Device orientation permission failed:', error));
+                // Also request motion permission
+                if (typeof DeviceMotionEvent.requestPermission === 'function') {
+                  DeviceMotionEvent.requestPermission()
+                    .then(response => {
+                      if (response === 'granted') {
+                        this.setupDeviceMotion();
+                      }
+                    })
+                    .catch(error => console.error('Device motion permission failed:', error));
+                } else {
+                  this.setupDeviceMotion();
+                }
               }, { once: true });
             } else if (window.DeviceOrientationEvent) {
               this.setupDeviceOrientation();
+              if (window.DeviceMotionEvent) {
+                this.setupDeviceMotion();
+              }
             }
           } else {
             document.addEventListener('keydown', (event) => {
@@ -571,17 +598,31 @@
             // Look around (yaw and pitch)
             this.camera.rotation.y = -gamma * 0.5;
             this.camera.rotation.x = Math.max(-Math.PI/4, Math.min(Math.PI/4, beta * 0.5 - Math.PI/6));
+          });
+        } catch (error) {
+          console.error('Device orientation setup failed:', error);
+        }
+      }
 
-            // Strafe based on tilt
-            const tiltThreshold = 15 * (Math.PI / 180); // 15 degrees
-            if (Math.abs(gamma) > tiltThreshold) {
-              this.tiltDirection = gamma > 0 ? 'left' : 'right';
+      setupDeviceMotion() {
+        try {
+          window.addEventListener('devicemotion', (event) => {
+            if (this.zoomedObject) return;
+            
+            const acceleration = event.accelerationIncludingGravity;
+            if (!acceleration) return;
+            
+            // Use x-axis acceleration for left/right strafing
+            const accelX = acceleration.x || 0; // Positive: phone moves right, Negative: phone moves left
+            const motionThreshold = 2; // m/s² threshold to avoid noise
+            if (Math.abs(accelX) > motionThreshold) {
+              this.tiltDirection = accelX > 0 ? 'right' : 'left';
             } else {
               this.tiltDirection = null;
             }
           });
         } catch (error) {
-          console.error('Device orientation setup failed:', error);
+          console.error('Device motion setup failed:', error);
         }
       }
 
@@ -599,7 +640,7 @@
               this.moveCamera('down');
             }
 
-            // Handle side-to-side movement from tilt on mobile
+            // Handle side-to-side movement from motion on mobile
             if (this.isMobile && this.tiltDirection) {
               this.moveCamera(this.tiltDirection);
             }
